assignments/program_3/errors.txt
In file included from starcraft.cpp:1:0:
spaceobject.h: In member function ‘double Starcraft::moveTo(int, std::vector<Asteroid>&)’:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starcraft.cpp:53:19: error: within this context
   x = asts[index].coords[0] - coords[0];
                   ^
In file included from starcraft.cpp:1:0:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starcraft.cpp:54:19: error: within this context
   y = asts[index].coords[1] - coords[1];
                   ^
In file included from starcraft.cpp:1:0:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starcraft.cpp:60:27: error: within this context
   coords[0] = asts[index].coords[0];
                           ^
In file included from starcraft.cpp:1:0:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starcraft.cpp:61:27: error: within this context
   coords[1] = asts[index].coords[1];
                           ^
In file included from starcraft.cpp:1:0:
spaceobject.h: In member function ‘int Starcraft::findClosest(std::vector<Asteroid>&)’:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starcraft.cpp:92:15: error: within this context
   x = vect[i].coords[0] - coords[0];
               ^
In file included from starcraft.cpp:1:0:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starcraft.cpp:93:15: error: within this context
   y = vect[i].coords[1] - coords[1];
               ^
starcraft.cpp:102:16: error: ‘__gnu_cxx::__alloc_traits<std::allocator<Asteroid> >::value_type {aka class Asteroid}’ has no member named ‘isCollected’
   if (!vect[i].isCollected() && tempDist < minDist) {
                ^
starprobe.cpp: In function ‘int getScanned()’:
starprobe.cpp:27:26: error: ‘scanned’ was not declared in this scope
 int getScanned(){ return scanned; }
                          ^
In file included from asteroid.h:4:0,
                 from starcraft.h:3,
                 from starprobe.h:3,
                 from starprobe.cpp:3:
spaceobject.h: In member function ‘int Starprobe::findClosest(std::vector<Asteroid>&)’:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starprobe.cpp:55:15: error: within this context
   x = vect[i].coords[0] - coords[0];
               ^
In file included from asteroid.h:4:0,
                 from starcraft.h:3,
                 from starprobe.h:3,
                 from starprobe.cpp:3:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starprobe.cpp:56:15: error: within this context
   y = vect[i].coords[1] - coords[1];
               ^
In file included from starcraft.h:3:0,
                 from starprobe.h:3,
                 from starprobe.cpp:3:
asteroid.h:13:19: error: ‘bool Asteroid::scanned’ is protected
   bool collected, scanned;
                   ^
starprobe.cpp:65:16: error: within this context
   if (!vect[i].scanned && tempDist < minDist) {
                ^
In file included from asteroid.h:4:0,
                 from starcraft.h:3,
                 from starprobe.h:3,
                 from starprobe.cpp:3:
spaceobject.h: In member function ‘void Starprobe::scanAsteroid(int, std::vector<Asteroid>&)’:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starprobe.cpp:125:18: error: within this context
   << asts[index].coords[0] << ", " << asts[index].coords[1]
                  ^
In file included from asteroid.h:4:0,
                 from starcraft.h:3,
                 from starprobe.h:3,
                 from starprobe.cpp:3:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starprobe.cpp:125:51: error: within this context
   << asts[index].coords[0] << ", " << asts[index].coords[1]
                                                   ^
starprobe.cpp:135:18: error: ‘__gnu_cxx::__alloc_traits<std::allocator<Asteroid> >::value_type {aka class Asteroid}’ has no member named ‘getPrecious’
  if (asts[index].getPrecious()) {
                  ^
In file included from starcraft.h:3:0,
                 from starprobe.h:3,
                 from starprobe.cpp:3:
asteroid.h:13:19: error: ‘bool Asteroid::scanned’ is protected
   bool collected, scanned;
                   ^
starprobe.cpp:142:14: error: within this context
  asts[index].scanned = true;
              ^
starship.cpp: In function ‘int getAsteroids()’:
starship.cpp:38:10: error: ‘asteroids’ was not declared in this scope
   return asteroids;
          ^
In file included from starship.h:4:0,
                 from starship.cpp:11:
asteroid.h: In member function ‘void Starship::mineAsteroid(int, std::vector<Asteroid>&)’:
asteroid.h:11:10: error: ‘double Asteroid::weight’ is protected
   double weight;
          ^
starship.cpp:95:19: error: within this context
   if (asts[index].weight < 9.0) {
                   ^
In file included from starship.h:4:0,
                 from starship.cpp:11:
asteroid.h:13:8: error: ‘bool Asteroid::collected’ is protected
   bool collected, scanned;
        ^
starship.cpp:97:16: error: within this context
    asts[index].collected = true;
                ^
In file included from starship.h:4:0,
                 from starship.cpp:11:
asteroid.h:11:10: error: ‘double Asteroid::weight’ is protected
   double weight;
          ^
starship.cpp:101:47: error: within this context
       cargoWeight = cargoWeight + asts[index].weight;
                                               ^
In file included from asteroid.h:4:0,
                 from starship.h:4,
                 from starship.cpp:11:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starship.cpp:105:20: error: within this context
     << asts[index].coords[0] << ", " << asts[index].coords[1]
                    ^
In file included from asteroid.h:4:0,
                 from starship.h:4,
                 from starship.cpp:11:
spaceobject.h:6:15: error: ‘int SpaceObject::coords [2]’ is protected
   int coords[2]; // coordinates of the object
               ^
starship.cpp:105:53: error: within this context
     << asts[index].coords[0] << ", " << asts[index].coords[1]
                                                     ^
In file included from starship.h:4:0,
                 from starship.cpp:11:
asteroid.h: In member function ‘void Starship::blAsteroid(int, std::vector<Asteroid>&)’:
asteroid.h:11:10: error: ‘double Asteroid::weight’ is protected
   double weight;
          ^
starship.cpp:164:24: error: within this context
   weight = asts[index].weight/pieces;
                        ^
In file included from starship.h:4:0,
                 from starship.cpp:11:
asteroid.h:15:8: error: ‘bool Asteroid::p’ is protected
   bool p;
        ^
starship.cpp:180:20: error: within this context
     if(asts[index].p)
